src/LinkAPI.h


typedef struct LinkedMem {
    NATIVE_UINT32 uiVersion;
    NATIVE_DWORD uiTick;
    float fAvatarPosition[VECTOR_LENGTH];
    float fAvatarFront[VECTOR_LENGTH];
    float fAvatarTop[VECTOR_LENGTH];
    wchar_t name[MAX_NAME_LENGTH];
    float fCameraPosition[VECTOR_LENGTH];
    float fCameraFront[VECTOR_LENGTH];
    float fCameraTop[VECTOR_LENGTH];
    wchar_t identity[MAX_IDENTITY_LENGTH];
    NATIVE_UINT32 context_len;
    unsigned char context[MAX_CONTEXT_LENGTH];
    wchar_t description[MAX_DESCRIPTION_LENGTH];
} LinkedMem;


/**
 * error codes hinting at the root cause of a failure
 */
typedef enum ErrorCode {
    /** no error */
    ERROR_CODE_NO_ERROR = 0,
    /** win32 specific: OpenFileMappingW failed to return a handle */
    ERROR_CODE_WIN32_NO_HANDLE = 1,
    /** win32 specific: MapViewOfFile failed to return a structure */
    ERROR_CODE_WIN32_NO_STRUCTURE = 2,
    /** unix specific: shm_open returned a negative integer */
    ERROR_CODE_UNIX_NO_HANDLE = 3,
    /** unix specific: mmap failed to return a structure */
    ERROR_CODE_UNIX_NO_STRUCTURE = 4,
    /** shared memory was not initialized */
    ERROR_CODE_NO_MEMORY_WAS_INITIALIZED = 5,
    /** the provided context length was out of bounds */
    ERROR_CODE_CONTEXT_LENGTH_EXCEEDED = 6
} ErrorCode;


/**
 * sets the description only
 *
 * Notice: This does not need to be updated every single frame. It shouldn't
 * change at all during a game.
 *
 * this is the text to explain the plugin and its purpose
 *
 * @param description	a text stating the purpose of this link
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setDescription(wchar_t description[MAX_DESCRIPTION_LENGTH]);


/**
 * updates and commits the avatar and camera vectors
 *
 * Notice: Mumble fetches these values 50 times a second, so please update
 * them every frame.
 *
 * @param fAvatarPosition	Position of the avatar.
 * @param fAvatarFront	Unit vector pointing out of the avatar's eyes.
 * @param fAvatarTop	Unit vector pointing out of the top of the avatar's head.
 * @param fCameraPosition	Position of the camera.
 * @param fCameraFront	Unit vector pointing out of the camera's lense.
 * @param fCameraTop	Unit vector pointing out of the camera's top.
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode updateVectors(
        float fAvatarPosition[VECTOR_LENGTH],
        float fAvatarFront[VECTOR_LENGTH],
        float fAvatarTop[VECTOR_LENGTH],
        float fCameraPosition[VECTOR_LENGTH],
        float fCameraFront[VECTOR_LENGTH],
        float fCameraTop[VECTOR_LENGTH]);


/**
 * sets avatar and camera vectors
 *
 * Notice: Mumble fetches these values 50 times a second, so please update
 * them every frame.
 *
 * @param fAvatarPosition	Position of the avatar.
 * @param fAvatarFront	Unit vector pointing out of the avatar's eyes.
 * @param fAvatarTop	Unit vector pointing out of the top of the avatar's head.
 * @param fCameraPosition	Position of the camera.
 * @param fCameraFront	Unit vector pointing out of the camera's lense.
 * @param fCameraTop	Unit vector pointing out of the camera's top.
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setVectors(
        float fAvatarPosition[VECTOR_LENGTH],
        float fAvatarFront[VECTOR_LENGTH],
        float fAvatarTop[VECTOR_LENGTH],
        float fCameraPosition[VECTOR_LENGTH],
        float fCameraFront[VECTOR_LENGTH],
        float fCameraTop[VECTOR_LENGTH]);


/**
 * updates and commits avatar AND camera vectors with the same values
 *
 * Notice: Mumble fetches these values 50 times a second, so please update
 * them every frame.
 *
 *      see <code>setVectorsByAvatar(...)</code> for details
 *
 * @param fAvatarPosition	Position of the avatar and camera.
 * @param fAvatarFront	Unit vector pointing out of the camera/avatar's eyes.
 * @param fAvatarTop	Unit vector pointing out of the top of the avatar's head/camera's top.
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode updateVectorsByAvatar(
        float fAvatarPosition[VECTOR_LENGTH],
        float fAvatarFront[VECTOR_LENGTH],
        float fAvatarTop[VECTOR_LENGTH]);


/**
 * sets avatar AND camera vectors with the same values
 *
 * this simply reuses the given vectors for the camera
 *
 * short cut function to use when the camera of the game/program is not
 * independent of the avatar
 *
 * Notice: Mumble fetches these values 50 times a second, so please update
 * them every frame.
 *
 *      see the respective single vector setters for details
 *
 * @param fAvatarPosition	Position of the avatar and camera.
 * @param fAvatarFront	Unit vector pointing out of the camera/avatar's eyes.
 * @param fAvatarTop	Unit vector pointing out of the top of the avatar's head/camera's top.
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setVectorsByAvatar(
        float fAvatarPosition[VECTOR_LENGTH],
        float fAvatarFront[VECTOR_LENGTH],
        float fAvatarTop[VECTOR_LENGTH]);


/**
 * The position of the avatar
 * 
 * location of the avatar or avatar's head where it is located in the 3D game world
 *
 * @return a 3D vector
 */
LINKAPI_API
float* getAvatarPosition();


/**
 * The position of the avatar
 *
 * location of the avatar or avatar's head where it is located in the 3D game world
 *
 * @param x the magnitude of the x basis vector
 * @param y the magnitude of the y basis vector
 * @param z the magnitude of the z basis vector
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setAvatarPosition(float x, float y, float z);


/**
 * Unit vector pointing out of the avatar's eyes
 *
 * indicates the direction the avatar or avatar's head is pointing at
 *
 * @return a 3D vector (look vector)
 */
LINKAPI_API
float* getAvatarFront();


/**
 * Unit vector pointing out of the avatars eyes
 *
 * indicates the direction the avatar or avatar's head is pointing at
 *
 * Note: this vector should be perpendicular to the top vector
 *
 * @param x the magnitude of the x basis vector
 * @param y the magnitude of the y basis vector
 * @param z the magnitude of the z basis vector
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setAvatarFront(float x, float y, float z);


/**
 * Unit vector pointing out of the top of the avatar's head
 *
 * indicates the direction that the top of the avatar or
 * avatar's head is pointing at
 *
 * @return a 3D vector (the avatar's up vector)
 */
LINKAPI_API
float* getAvatarTop();


/**
 * Unit vector pointing out of the top of the avatar's head
 *
 * indicates the direction that the top of the avatar or
 * avatar's head is pointing at
 *
 * Note: this vector should be perpendicular to the front vector
 * 
 * @param x the magnitude of the x basis vector
 * @param y the magnitude of the y basis vector
 * @param z the magnitude of the z basis vector
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setAvatarTop(float x, float y, float z);


/**
 * The position of the camera
 *
 * location of the camera where it is located in the 3D game world
 * 
 * @return a 3D vector
 */
LINKAPI_API
float* getCameraPosition();


/**
 * The position of the camera
 *
 * location of the camera where it is located in the 3D game world
 *
 * @param x the magnitude of the x basis vector
 * @param y the magnitude of the y basis vector
 * @param z the magnitude of the z basis vector
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setCameraPosition(float x, float y, float z);


/**
 * Unit vector pointing out of the front/lens of the camera
 *
 * indicates the direction the camera is pointing at
 * 
 * @return a 3D vector (look vector)
 */
LINKAPI_API
float* getCameraFront();


/**
 * Unit vector pointing out of the front/lens of the camera
 *
 * indicates the direction the camera is pointing at
 *
 * Note: this vector should be perpendicular to the top vector
 *
 * @param x the magnitude of the x basis vector
 * @param y the magnitude of the y basis vector
 * @param z the magnitude of the z basis vector
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setCameraFront(float x, float y, float z);


/**
 * Unit vector pointing out of the top of the camera
 *
 * indicates the direction that the top of the camera is pointing at
 *
 * @return a 3D vector (the camera's up vector)
 */
LINKAPI_API
float* getCameraTop();


/**
 * Unit vector pointing out of the top of the camera
 *
 * indicates the direction that the top of the camera is pointing at
 * 
 * Note: this vector should be perpendicular to the front vector
 *
 * @param x the magnitude of the x basis vector
 * @param y the magnitude of the y basis vector
 * @param z the magnitude of the z basis vector
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setCameraTop(float x, float y, float z);


LINKAPI_API
NATIVE_UINT32 getUiVersion();

LINKAPI_API
ErrorCode setUiVersion(NATIVE_UINT32 version);

LINKAPI_API
ErrorCode updateUiVersion(NATIVE_UINT32 version);


/**
 * tick counter which is used to tell if updates to the shared memory occur
 *
 * if this number stays the same no the rest of the shared memory is not read
 * and the link plugin will unlink after a certain timeout
 *
 * @return the last tick number
 */
LINKAPI_API
NATIVE_DWORD getUiTick();


/**
 * tick counter which is used to tell if updates to the shared memory occur
 *
 * if this number stays the same the rest of the shared memory is not read
 * and the link plugin will unlink after a certain timeout
 *
 * @param tick the tick number to set
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setUiTick(NATIVE_DWORD tick);


/**
 * tick counter which is used to tell if updates to the shared memory occur
 *
 * if this number stays the same the rest of the shared memory is not read
 * and the link plugin will unlink after a certain timeout
 *
 * @param tick the tick number to set
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode updateUiTick(NATIVE_DWORD tick);


/**
 * directly manipulate the entire linked memory at once
 *
 * IMPORTANT: Note that you should also update uiTick yourself, else a timeout
 * will occur and your data will not be read. Subsequently calling the
 * commit()-function once will not help when uiTick is always set to the same
 * value.
 *
 * Notice: Parts of this does not need to be updated every single frame.
 * Please use the more directly appropriate update functions instead.
 *
 * @param source data structure which is to be copied
 *
 * @return	an error code, see <code>enum ErrorCode</code>
 */
LINKAPI_API
ErrorCode setData(LinkedMem *source);


/**
 * the entire shared memory for direct access
 *
 * @return a pointer to the shared memory structure
 */
LINKAPI_API
LinkedMem* getData();