tests/java/src/zsawyer/mumble/jna/LinkAPILibrary.java


	/**
	 * Original signature :
	 * <code>ErrorCode setDescription(wchar_t[2048])</code><br>
	 * <i>native declaration : line 258</i>
	 */
	int setDescription(CharBuffer description);

	/**
	 * updates avatar and camera vectors
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 * @param fAvatarPosition	Position of the avatar.
	 * @param fAvatarFront	   Unit vector pointing out of the avatar's eyes.
	 * @param fAvatarTop	     Unit vector pointing out of the top of the
	 *                           avatar's head.
	 * @param fCameraPosition	Position of the camera.
	 * @param fCameraFront	   Unit vector pointing out of the camera's lense.
	 * @param fCameraTop	     Unit vector pointing out of the camera's top.
	 *
	 * @return true if success else false (this would usually mean that the
	 *            memory structure was not initialized properly)
	 *
	 * <br>
	 * Original signature :
	 * <code>ErrorCode updateVectors(float[3], float[3], float[3], float[3], float[3], float[3])</code><br>
	 * <i>native declaration : line 277</i>
	 */
	int updateVectors(FloatBuffer fAvatarPosition, FloatBuffer fAvatarFront,
			FloatBuffer fAvatarTop, FloatBuffer fCameraPosition,
			FloatBuffer fCameraFront, FloatBuffer fCameraTop);

	/**
	 * Original signature :
	 * <code>ErrorCode setVectors(float[3], float[3], float[3], float[3], float[3], float[3])</code><br>
	 * <i>native declaration : line 285</i>
	 */
	int setVectors(FloatBuffer fAvatarPosition, FloatBuffer fAvatarFront,
			FloatBuffer fAvatarTop, FloatBuffer fCameraPosition,
			FloatBuffer fCameraFront, FloatBuffer fCameraTop);

	/**
	 * updates avatar AND camera vectors
	 *
	 * this simply reuses the given vectors for the camera
	 *
	 * short cut function to use when the camera of the game/program is not
	 * independent of the avatar
	 *
	 * Notice: Mumble fetches these values 50 times a second, so please update
	 * them every frame.
	 *
	 * @param fAvatarPosition	Position of the avatar and camera.
	 * @param fAvatarFront	   Unit vector pointing out of the camera/avatar's
	 *                           eyes.
	 * @param fAvatarTop	     Unit vector pointing out of the top of the
	 *                           avatar's head/camera's top.
	 *
	 * @return true if success else false (this would usually mean that the
	 *            memory structure was not initialized properly)
	 *
	 * <br>
	 * Original signature :
	 * <code>ErrorCode updateVectorsByAvatar(float[3], float[3], float[3])</code><br>
	 * <i>native declaration : line 312</i>
	 */
	int updateVectorsByAvatar(FloatBuffer fAvatarPosition,
			FloatBuffer fAvatarFront, FloatBuffer fAvatarTop);

	/**
	 * Original signature :
	 * <code>ErrorCode setVectorsByAvatar(float[3], float[3], float[3])</code><br>
	 * <i>native declaration : line 317</i>
	 */
	int setVectorsByAvatar(FloatBuffer fAvatarPosition, FloatBuffer fAvatarFront,
			FloatBuffer fAvatarTop);

	/**
	 * Original signature :
	 * <code>float* getAvatarPosition()</code><br>
	 * <i>native declaration : line 323</i>
	 */
	FloatBuffer getAvatarPosition();

	/**
	 * Original signature :
	 * <code>ErrorCode setAvatarPosition(float, float, float)</code><br>
	 * <i>native declaration : line 325</i>
	 */
	int setAvatarPosition(float x, float y, float z);

	/**
	 * Original signature :
	 * <code>float* getAvatarFront()</code><br>
	 * <i>native declaration : line 328</i>
	 */
	FloatBuffer getAvatarFront();

	/**
	 * Original signature :
	 * <code>ErrorCode setAvatarFront(float, float, float)</code><br>
	 * <i>native declaration : line 330</i>
	 */
	int setAvatarFront(float x, float y, float z);

	/**
	 * Original signature :
	 * <code>float* getAvatarTop()</code><br>
	 * <i>native declaration : line 333</i>
	 */
	FloatBuffer getAvatarTop();

	/**
	 * Original signature :
	 * <code>ErrorCode setAvatarTop(float, float, float)</code><br>
	 * <i>native declaration : line 335</i>
	 */
	int setAvatarTop(float x, float y, float z);

	/**
	 * Original signature :
	 * <code>float* getCameraPosition()</code><br>
	 * <i>native declaration : line 339</i>
	 */
	FloatBuffer getCameraPosition();

	/**
	 * Original signature :
	 * <code>ErrorCode setCameraPosition(float, float, float)</code><br>
	 * <i>native declaration : line 341</i>
	 */
	int setCameraPosition(float x, float y, float z);

	/**
	 * Original signature :
	 * <code>float* getCameraFront()</code><br>
	 * <i>native declaration : line 344</i>
	 */
	FloatBuffer getCameraFront();

	/**
	 * Original signature :
	 * <code>ErrorCode setCameraFront(float, float, float)</code><br>
	 * <i>native declaration : line 346</i>
	 */
	int setCameraFront(float x, float y, float z);

	/**
	 * Original signature :
	 * <code>float* getCameraTop()</code><br>
	 * <i>native declaration : line 349</i>
	 */
	FloatBuffer getCameraTop();

	/**
	 * Original signature :
	 * <code>ErrorCode setCameraTop(float, float, float)</code><br>
	 * <i>native declaration : line 351</i>
	 */
	int setCameraTop(float x, float y, float z);

	/**
	 * Original signature :
	 * <code>int getUiVersion()</code><br>
	 * <i>native declaration : line 355</i>
	 */
	int getUiVersion();

	/**
	 * Original signature :
	 * <code>ErrorCode setUiVersion(int)</code><br>
	 * <i>native declaration : line 357</i>
	 */
	int setUiVersion(int version);

	/**
	 * Original signature :
	 * <code>ErrorCode updateUiVersion(int)</code><br>
	 * <i>native declaration : line 359</i>
	 */
	int updateUiVersion(int version);

	/**
	 * Original signature :
	 * <code>DWORD getUiTick()</code><br>
	 * <i>native declaration : line 362</i>
	 */
	int getUiTick();

	/**
	 * Original signature :
	 * <code>ErrorCode setUiTick(DWORD)</code><br>
	 * <i>native declaration : line 364</i>
	 */
	int setUiTick(int tick);

	/**
	 * Original signature :
	 * <code>ErrorCode updateUiTick(DWORD)</code><br>
	 * <i>native declaration : line 366</i>
	 */
	int updateUiTick(int tick);

	/**
	 * a convenience function to directly manipulate the entire linked memory at
	 * once
	 *
	 * Notice: Parts of this does not need to be updated every single frame.
	 * Please use the more directly appropriate update functions instead.
	 *
	 * @param source data structure which is to be copied
	 *
	 * @return true if success else false (this would usually mean that the
	 *            memory structure was not initialized properly)
	 *
	 * <br>
	 * Original signature :
	 * <code>ErrorCode setData(LinkedMem*)</code><br>
	 * <i>native declaration : line 384</i>
	 */
	int setData(LinkAPILibrary.LinkedMem source);

	/**
	 * Original signature :
	 * <code>LinkedMem* getData()</code><br>
	 * <i>native declaration : line 386</i>
	 */
	LinkAPILibrary.LinkedMem getData();
}
